# polars_janitor

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: benchmark_competitors.py
docs/: launch.md
scripts/: check_release_artifacts.py
tests/: test_compat.py  test_rust_names.py
