[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "polars-janitor"
version = "0.1.0"
description = "Small janitorial helpers for Polars dataframes."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "VovaVili" },
]
maintainers = [
  { name = "VovaVili" },
]
keywords = [
  "data-cleaning",
  "dataframe",
  "janitor",
  "polars",
  "rust",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
]
dependencies = [
  "polars>=1.29.0",
]

[project.urls]
Homepage = "https://github.com/VovaVili/polars-janitor"
Repository = "https://github.com/VovaVili/polars-janitor"
Issues = "https://github.com/VovaVili/polars-janitor/issues"
Changelog = "https://github.com/VovaVili/polars-janitor/releases"

[project.optional-dependencies]
dev = [
  "hypothesis>=6.0",
  "maturin>=1.8,<2",
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.maturin]
bindings = "pyo3"
module-name = "polars_janitor._rust"
python-source = "src"
include = [
  { path = "Cargo.lock", format = "sdist" },
  { path = "docs/**/*", format = "sdist" },
  { path = "examples/**/*", format = "sdist" },
  { path = "LICENSE", format = "sdist" },
  { path = "README.md", format = "sdist" },
  { path = "rust/**/*", format = "sdist" },
  { path = "scripts/**/*", format = "sdist" },
  { path = "src/**/*", format = "sdist" },
  { path = "uv.lock", format = "sdist" },
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-line-length = 120

[tool.ruff.lint]
select = [
  "F",     # pyflakes
  "E",     # pycodestyle, errors
  "W",     # pycodestyle, warnings
  "I",     # isort
  "C90",   # McCabe complexity
  "D",     # pydocstyle, all conventions
  "A",     # flake8-builtins
  "DTZ",   # flake8, ban timezone-naive datetimes
  "BLE",   # flake8-blind-except
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "EXE",   # flake8-executable
  "LOG",   # flake8-logging
  "G",     # flake8-logging-format
  "S",     # flake8-bandit
  "PT",    # flake8-pytest-style
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "TC",    # flake8-type-checking
  "PTH",   # flake8-use-pathlib
  "ARG",   # flake8-unused-arg
  "PIE",   # flake8-pie
  "RSE",   # flake8-raise
  "RET",   # flake8-return
  "ICN",   # flake8-import-conventions
  "SLOT",  # flake8-slots
  "N",     # pep8-naming
  "ERA",   # eradicate
  "UP",    # pyupgrade
  "FURB",  # refurb
  "PERF",  # perflint
  "TRY",   # tryceratops
  "RUF",   # ruff-specific rules
  "FA102", # Add "from __future__ import annotations" to every file
  "PLC",   # Pylint conventions
  "PLE",   # Pylint errors
  "PLW",   # Pylint warnings

  # Selected Pylint refactors that are relatively uncontroversial.
  "PLR01",
  "PLR02",
  "PLR04",
  # "PLR09", # Enforces shorter functions, but longer functions are not necessarily bad when done right
  "PLR17",
  # "PLR2004", # Avoids magic values, but enforcing it everywhere can be too demanding
  "PLR2044",
  "PLR5",
  # "PLR6", # Good ruleset, but requires Ruff preview mode

  # Useful rules for third-party libraries
  "AIR",  # Airflow
  "FAST", # FastAPI
  "NPY",  # NumPy
]

ignore = [
  # Conflicts with another pydocstyle rule
  "D203",
  "D213",
  "TRY003", # Long error messages are not inherently bad; subclassing every exception case is overkill
  "TRY301", # It can be useful to raise inside a try block while testing
  # Given two mutually exclusive shell-related options, choose the more secure one
  "S603",
  "S606",
  # Replacing built-in open() with pathlib can be needlessly verbose and slightly less performant
  "PTH110",
  "PTH123",
  "ICN003", # Aliased imports make some Polars and PySpark code more readable, e.g. `from polars import col, lit`

  # Conflicting Ruff formatter rules:
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "COM812",
  "COM819",
  "ISC002",

  # Uncomment the following if working with Marimo notebooks
  # "PLC0415",
  # "N803",
  # "N806",
  # "B018", # Ignored in Jupyter notebooks, but not automatically detected for Marimo notebooks yet
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"] # __init__.py files can be empty
"tests/*.py" = ["S101"] # pytest relies on asserts

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
]

runtime-evaluated-decorators = [
  "pydantic.dataclasses.dataclass",
  "pydantic.validate_call",
]
